@@ -4,6 +4,8 @@ import de.cebitec.mgx.gui.controller.MGXMaster;
 import de.cebitec.mgx.gui.datamodel.Habitat;
 import de.cebitec.mgx.gui.datamodel.Sample;
 import de.cebitec.mgx.gui.nodefactory.SampleNodeFactory;
+import de.cebitec.mgx.gui.taskview.MGXTask;
+import de.cebitec.mgx.gui.taskview.TaskManager;
 import de.cebitec.mgx.gui.wizard.habitat.HabitatWizardDescriptor;
 import de.cebitec.mgx.gui.wizard.sample.SampleWizardDescriptor;
 import java.awt.Dialog;
@@ -36,31 +38,16 @@ public class HabitatNode extends MGXNodeBase {
         setShortDescription(getToolTipText(h));
         this.snf = snf;
     }
-    
+
     private String getToolTipText(Habitat h) {
-        return new StringBuilder("<html>")
-                .append("<b>Habitat: </b>")
-                .append(h.getName())
-                .append("<br><hr><br>")
-                .append("biome: ")
-                .append(h.getBiome())
-                .append("<br>")
-                .append("location: ")
-                .append(new Double(h.getLatitude()).toString())
-                .append(" / ")
-                .append(new Double(h.getLongitude()).toString())
-                .append("<br>")
-                .append("altitude: ")
-                .append(Integer.valueOf(h.getAltitude()).toString())
-                .append("</html>")
-                .toString();
+        return new StringBuilder("<html>").append("<b>Habitat: </b>").append(h.getName()).append("<br><hr><br>").append("biome: ").append(h.getBiome()).append("<br>").append("location: ").append(new Double(h.getLatitude()).toString()).append(" / ").append(new Double(h.getLongitude()).toString()).append("<br>").append("altitude: ").append(Integer.valueOf(h.getAltitude()).toString()).append("</html>").toString();
     }
 
     @Override
     public boolean canDestroy() {
         return true;
     }
-    
+
     @Override
     public Action[] getActions(boolean context) {
         return new Action[]{new EditHabitat(), new DeleteHabitat(), new AddSample()};
@@ -98,8 +85,8 @@ public class HabitatNode extends MGXNodeBase {
 
         @Override
         public void actionPerformed(ActionEvent e) {
-            Habitat hab = getLookup().lookup(Habitat.class);
-            NotifyDescriptor d = new NotifyDescriptor("Really delete habitat " + hab.getName() + "?",
+            final Habitat habitat = getLookup().lookup(Habitat.class);
+            NotifyDescriptor d = new NotifyDescriptor("Really delete habitat " + habitat.getName() + "?",
                     "Delete habitat",
                     NotifyDescriptor.YES_NO_OPTION,
                     NotifyDescriptor.QUESTION_MESSAGE,
@@ -107,8 +94,23 @@ public class HabitatNode extends MGXNodeBase {
                     null);
             Object ret = DialogDisplayer.getDefault().notify(d);
             if (NotifyDescriptor.YES_OPTION.equals(ret)) {
-                getMaster().Habitat().delete(hab.getId());
-                fireNodeDestroyed();
+                MGXTask deleteTask = new MGXTask() {
+
+                    @Override
+                    public void process() {
+                        setStatus("Deleting..");
+                        getMaster().Habitat().delete(habitat.getId());
+                    }
+
+                    @Override
+                    public void finished() {
+                        super.finished();
+                        fireNodeDestroyed();
+                    }
+                };
+
+                TaskManager.getInstance().addTask("Delete " + habitat.getName(), deleteTask);
+
             }
         }
     }
@@ -129,7 +131,7 @@ public class HabitatNode extends MGXNodeBase {
             if (!cancelled) {
                 Habitat hab = getLookup().lookup(Habitat.class);
                 Sample s = wd.getSample();
-                s.setHabitatId(hab.getId()); 
+                s.setHabitatId(hab.getId());
                 getMaster().Sample().create(s);
                 snf.refreshChildren();
             }
